# lego

./: .coveragerc  .env.example  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  COMPLIANCE_REPORT.md  DECISIONS.md  PR_REVIEW.md  README.md  TODO.md  last claude summary.txt  pyproject.toml  pytest.ini  requirements.txt  research.md
.claude/: instructions.md  quick-reference.md  session-start.md  settings.local.json
.claude/skills/fastapi-review/: SKILL.md
.github/: code-review-report.md  copilot-guidelines.md
.github/workflows/: ci.yml
app/: main.py
app/api/: inventory_router.py  schemas.py  sets_router.py
app/core/: catalog_interface.py  exceptions.py  models.py  services.py  states.py
app/infrastructure/: bricklink_catalog.py  bricklink_client.py  db.py  oauth_client.py
docs/: CATALOG_INTEGRATION.md  bricklink.md
tests/: conftest.py
tests/e2e/: README.md  __init__.py  conftest.py  test_inventory_e2e.py  test_sets_e2e.py
tests/test_api/: test_inventory_router.py  test_sets_router.py
tests/test_core/: test_services.py
tests/test_infrastructure/: test_bricklink_catalog.py  test_oauth_client.py
